更新最新优化

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<!--
+作者：程序员寒山
+邮箱：han_shan2000@163.com
+
+功能简介：
+这是项目的主页面，主要功能包括：
+1. 提供大模型测试的用户界面
+2. 支持测试用例的选择和自定义输入
+3. 实现模型配置的弹窗交互
+4. 展示多模型并行测试结果
+5. 提供响应式的卡片式布局
+-->
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
